--- a/staticfiles/lilacs.html
+++ b/staticfiles/lilacs.html
@@ -96,6 +96,13 @@
         </div>
         <div class="contact">
             <div class="content_contact">
+               <form action ="" method="POST" >
+                {% csrf_token %}
+                <table border='10'>
+                    {{ form }}
+                </table>
+                <button type="submit">Submit</button>
+                </form>
 
             </div>
         </div>
@@ -107,5 +114,42 @@
             </em>
         </footer>
     </div>
+    <script>
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        
+        function feedback_form(message){
+        console.log(message)
+        const url="feedback/"
+        const method="POST"
+        const data = JSON.stringify({
+            message: message
+        })
+        const xhr = new XMLHttpRequest()
+        const csrftoken = getCookie('csrftoken');
+        xhr.open(method, url)
+        xhr.setRequestHeader("Content-Type", "application/json")
+        xhr.setRequestHeader("HTTP_X_REQUESTED_WITH","XMLHttpRequest")
+        xhr.setRequestHeader("X-Requested-With","XMLHttpRequest")
+        xhr.setRequestHeader("X-CSRFToken", csrftoken)
+        xhr.send(data)
+        return
+        // currentCount++
+        // return
+    }
+</script>
 </body>
 </html>
